--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -21,8 +21,8 @@
   justify-content: space-between;
   margin-left: 7px;
   margin-right: 7px;
-  border-top: 1px dotted grey;
-  border-bottom: 1px dotted grey;
+  border-top: 1px dotted gray;
+  border-bottom: 1px dotted gray;
   padding-top: 10px;
   padding-left: 20px;
   padding-right: 20px;
@@ -62,7 +62,19 @@
   position: relative;
 }
 
+.average-show {
+  i {
+    color:  #EDB867;
+    margin-right: 5px;
+  }
+  margin-top: 24px;
+}
+
 .description-show {
+  .author-and-average {
+    display: flex;
+    justify-content: space-between;
+  }
 
   h2{
     padding-bottom: 1px;
