aligned personalization button

--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -69,7 +69,9 @@
   }
   margin-top: 24px;
 }
-
+.button-personalize {
+  text-align: center;
+}
 .description-show {
   .author-and-average {
     display: flex;
