--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -29,9 +29,11 @@
           </div>
 
         <!-- Button trigger modal -->
+        <div class="button-personalize">
           <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
             Personalize your book
           </button>
+        </div>
         </div>
         <!-- Modal -->
         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
