--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,7 +19,7 @@
           <div class="list-facts">
             <p><i class="fas fa-search"></i> <%=  @book.category %></p>
             <p><i class="fas fa-money-bill-alt"></i> <%= humanized_money_with_symbol(@book.price) %></p>
-            <p><i class="fas fa-child"></i> <%=  @book.age %></p>
+            <p><i class="fas fa-birthday-cake"></i> <%=  @book.age %></p>
           </div>
 
         <!-- Button trigger modal -->
