--- a/app/assets/stylesheets/components/_home_banner.scss
+++ b/app/assets/stylesheets/components/_home_banner.scss
@@ -2,8 +2,9 @@
   color: white;
   text-align: center;
   background: image-url('bookies_background.jpg');
-  height: calc(100vh - 0px);
+  height: calc(100vh + 70px);
   position: relative;
+  margin: -70px;
 
   /* if you have a 70px navbar => height: calc(100vh - 70px); */
   background-size: cover !important;
