--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -27,7 +27,7 @@ $personalization_color: #9ACFE1;
 }
 
 .home-color {
-  background-color: $home_color;
+  background-color: transparent;
 }
 
 .dashboard-color {
