--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -22,16 +22,6 @@
             </div>
           <ul class="dropdown-menu dropdown-menu-right navbar-bookie-dropdown-menu">
             <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-cog"></i>  <%= t(".settings", default: "Settings") %>
-              <% end %>
-            </li>
-            <li>
               <%= link_to destroy_user_session_path, method: :delete do %>
                 <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
               <% end %>
@@ -42,7 +32,8 @@
       </div>
     <% else %>
       <!-- Login link (when logged out) -->
-      <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-bookie-item navbar-bookie-link" %>
+      <%= link_to t(".sign_in", default: "Sign up"), new_user_registration_path, class: "navbar-bookie-item navbar-bookie-link" %>
+      <%= link_to t(".log_in", default: "Login"), new_user_session_path, class: "navbar-bookie-item navbar-bookie-link" %>
     <% end %>
   </div>
 
