added background color and navbar to review page

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -45,3 +45,7 @@ $personalization_color: #9ACFE1;
 .personalization-color {
  background-color: $personalization-color;
 }
+
+.review-color {
+  background-color: $index_color;
+}
