--- a/app/assets/stylesheets/components/_review.scss
+++ b/app/assets/stylesheets/components/_review.scss
@@ -1,3 +1,11 @@
+.site-content-review {
+  min-height: 100vh;
+  width: 100%;
+  // background-color: white;
+  // background-color: #82D0E2;
+  background-color: #B4D682;
+}
+
 .line {
   border-bottom: 1px solid #DBDBDB !important;
 }
