--- a/app/assets/stylesheets/components/_checkout.scss
+++ b/app/assets/stylesheets/components/_checkout.scss
@@ -40,12 +40,13 @@
 }
 
 .book-photo-checkout {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   img {
     width: 37%;
-    margin-top: 5%;
+    margin-top: 50px;
     border-radius: 15px;
 
   }
