--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -21,13 +21,15 @@
   justify-content: space-between;
   margin-left: 7px;
   margin-right: 7px;
-  border-top: 1px dotted gray;
-  border-bottom: 1px dotted gray;
-  padding-top: 10px;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-bottom: 22px;
-  margin-top: 7%;
+  padding: 20px 30px;
+  margin-bottom: 12.5px;
+  margin-top: 50px;
+  border-radius: 3px;
+  background: rgba(180, 214, 130, 0.1);
+
+  p {
+    margin: 0;
+  }
 
   .fas {
     padding-right: 10px;
@@ -40,6 +42,29 @@
     font-size: 22px;
 
   }
+}
+
+.payment-details-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 0px;
+  padding-bottom: 40px;
+}
+
+.payment-detail {
+  text-align: center;
+  flex: 1;
+
+  h3 {
+    font-weight: 700;
+    font-size: 22px;
+  }
+}
+
+.detail-text {
+  font-weight: 400;
+  font-size: 14px;
+  opacity: 0.5;
 }
 
 .bookmark {
