worked on icon color

--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -28,20 +28,20 @@
 
     padding-right: 15px;
     padding-left: 15px;
-    color: #C7374B;
-    opacity: 0.75;
+    color: #B4D682;
+    opacity: 1;
     font-size: 26px;
     }
 
     .fas:hover {
-      opacity: 1;
+      opacity: 0.8;
     }
 
     a {
       color: grey;
       font-family: 'Nunito', sans-serif;
       font-weight: lighter;
-      font-size: 20px;
+      font-size: 17px;
     }
 
     a:hover {
