--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -12,7 +12,7 @@
             <i class="fas fa-bookmark"></i>
           </div>
           <div class="description-show">
-            <h2><%= @book.name %></h2>
+            <h2 class="book-preview-title"><%= @book.name %></h2>
             <div class="author-and-average">
               <h3>by <%= @book.author %></h3>
               <div class="average-show">
