--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -63,7 +63,7 @@
 
 .detail-text {
   font-weight: 400;
-  font-size: 15px;
+  font-size: 16px;
   opacity: 0.5;
 }
 
@@ -155,3 +155,6 @@
   font-size: 55px;
 }
 
+.book-preview-title {
+  display: flex;
+}
