--- a/app/views/pdfs/show.html.erb
+++ b/app/views/pdfs/show.html.erb
@@ -1,10 +1,14 @@
+
+<%= wicked_pdf_image_tag @personalization.book.photo, class: "pdf-image" %>
+
+<div class="break"></div>
 <% @personalization.book.pages.each do |page| %>
   <% if page.markup == "paragraph" %>
-    <p><%= page.content.gsub(/name/, @personalization.character_name) %></p>
+    <p class='pdf-book-text'><%= page.content.gsub(/name/, @personalization.character_name) %></p>
   <% elsif page.markup == "title" %>
-    <h1><%= page.content.gsub(/name/, @personalization.character_name) %></h1>
+    <h1 class='pdf-book-title'><%= page.content.gsub(/name/, @personalization.character_name) %></h1>
   <% elsif page.markup == "image" %>
-    <%= wicked_pdf_image_tag page.image %>
+    <%= wicked_pdf_image_tag page.image, class: "pdf-image" %>
   <% end %>
 <% end %>
 
