--- a/app/views/personalizations/show.html.erb
+++ b/app/views/personalizations/show.html.erb
@@ -13,8 +13,8 @@
       </div>
       <div class="flipper">
         <div class="current left page <%= @dataset_flipper[0][:color] %> ontop">
-          <% if @dataset_flipper[0][:image] && false%>
-            <img src="<%#= @dataset_flipper[0][:image] %>" alt="" class="preview-image">
+          <% if @dataset_flipper[0][:image] %>
+            <%= image_tag @dataset_flipper[0][:image], class: "preview-image" %>
           <% else %>
             <%= @dataset_flipper[0][:content].html_safe %>
           <% end %>
