--- a/app/views/books/dashboard.html.erb
+++ b/app/views/books/dashboard.html.erb
@@ -23,7 +23,7 @@
               <h2><%if current_user.personalizations.count >= 1 %> Thank you for sharing our passion. <i class="em em-smiley"></i></h2><%end %>
             </div>
           </div>
-          <div class="description">
+          <div class="description" id="interesting-books">
             <div class="description-content">
               <h1>Your books</h1>
               <div class="row">
@@ -50,7 +50,7 @@
             </div>
           </div>
 
-          <div class="stars-dashboard">
+          <div class="stars-dashboard" id="interesting-wishlist">
             <div class="description-content">
               <h1>Your wishlist</h1>
               <div class="row">
