--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,11 +1,22 @@
 
 <div class="footer">
-  <div class="footer-links">
+  <div class="list-footer">
+    <% if user_signed_in? %>
+      <!-- Links when logged in -->
+      <%= link_to "Browse All Books", books_path%>
+      <%= link_to "Your Wishlist", dashboard_path(:anchor => "interesting-wishlist")%>
+      <%= link_to "Your Books", dashboard_path(:anchor => "interesting-books")%>
+    <%else%>
+      <%= link_to t(".sign_in", default: "Sign up"), new_user_registration_path%>
+      <%= link_to t(".log_in", default: "Login"), new_user_session_path%>
+    <%end%>
+  </div>
+<!--   <div class="footer-links">
     <a href="www.instagram.com"><i class="fa fa-instagram"></i></a>
     <a href="www.facebook.com"><i class="fa fa-facebook"></i></a>
     <a href="www.twitter.com"><i class="fa fa-twitter"></i></a>
-  </div>
-  <div class="footer-copyright">
-    <p> Help your child develop through customized stories</p>
+  </div> -->
+  <div class=" list-footer logo-footer">
+    <h1><%= image_tag "bookie_logo.svg", height: 50 %></h1>
   </div>
 </div>
