changed text of banner

--- a/app/views/books/home.html.erb
+++ b/app/views/books/home.html.erb
@@ -3,8 +3,7 @@
   <div class="banner-content">
     <h1><%= image_tag "bookie_logo.svg", height: 50 %> BOOKIDS</h1>
     <%= image_tag "linea_redonda.png" %>
-    <p>Amazing personalized stories
-    for amazing children</p>
+    <p>Help your child develop through customized stories</p>
     <div class ="search-button">
       <%= form_tag books_path, method: :get do %>
       <%= text_field_tag :query,
@@ -21,7 +20,7 @@
   <div class="row">
     <div class="col-xs-12 home-description">
       <h1>Welcome to Bookids</h1>
-      <p>The funnest way to educate and share stunning personalized stories with your kids.</p>
+      <p>The best way to educate and share stunning personalized stories with your kids.</p>
     </div>
   </div>
   <div class="col-xs-12">
@@ -35,7 +34,7 @@
         <div class="step_by_step">
           <%= image_tag "icon2.png", class:"intro-icons" %>
           <h1>Personalize your story</h1>
-          <p>Make the story personal and add some personal details to make it stunning!</p>
+          <p>Customize the story and add some personal details to make it stunning!</p>
         </div>
         <div class="step_by_step last"  >
           <%= image_tag "icon3.png", class:"intro-icons"  %>
