--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -11,19 +11,19 @@
         <table style="width:100%" class="order-summary">
           <tr>
             <td class="confirmation-info">Username</td>
-            <td><%= @order.user.first_name.capitalize %> <%= @order.user.last_name %></td>
+            <td class="user-status"><%= @order.user.first_name.capitalize %> <%= @order.user.last_name %></td>
           </tr>
           <tr>
             <td class="confirmation-info">Book Title</td>
-            <td><%= @order.user.personalizations.last.book.name%></td>
+            <td class="user-status"><%= @order.user.personalizations.last.book.name%></td>
           </tr>
           <tr>
-            <td class="confirmation-info">Order Status</td>
-            <td><%= @order.state.capitalize %></td>
+            <td class="confirmation-info">Status</td>
+            <td class="user-status"><%= @order.state.capitalize %></td>
           </tr>
           <tr>
-            <td class="confirmation-info"><strong>Amount Paid</strong></td>
-            <td><strong><%= humanized_money_with_symbol(@order.amount) %></strong></td>
+            <td class="confirmation-info"><strong>Order Total</strong></td>
+            <td class="user-status"><strong><%= humanized_money_with_symbol(@order.amount) %></strong></td>
           </tr>
         </table>
       <div class="back-to-confirmation">
