--- a/app/assets/stylesheets/components/_confirmation.scss
+++ b/app/assets/stylesheets/components/_confirmation.scss
@@ -56,7 +56,7 @@
   // margin-left: 29%;
   // margin-right: 20%;
   line-height: 1.9;
-  display: flex;
+  display: inline-block;
   width: 84%;
   border-radius: 3px;
   background: rgba(180, 214, 130, 0.1);
@@ -103,3 +103,6 @@
   font-weight: bold;
 }
 
+.user-status {
+  color: black;
+}
