--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,6 @@
-
+ <%= image_tag "footercurl.png", class:"footer_bottom" %>
 <div class="footer">
+
   <div class="list-footer">
     <% if user_signed_in? %>
       <!-- Links when logged in -->
@@ -17,6 +18,6 @@
     <a href="www.twitter.com"><i class="fa fa-twitter"></i></a>
   </div> -->
   <div class=" list-footer logo-footer">
-    <h1><%= image_tag "bookie_logo.svg", height: 50 %></h1>
+    <h1><%= image_tag "bookie_logo.svg", height: 50%></h1>
   </div>
 </div>
