--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -38,5 +38,20 @@
 }
 
 .logo-footer {
-  background-color: black;
+  fill: blue;
+}
+
+
+.footer_bottom{
+  width: 100%;
+  margin-top: -80px;
+  z-index: 999;
+  margin-bottom: -25px;
+
+}
+
+.logo-footer{
+  color: blue;
+  padding-bottom: 20px;
+
 }
