--- a/app/views/books/home.html.erb
+++ b/app/views/books/home.html.erb
@@ -48,10 +48,8 @@
     </div>
    </div>
  </div>
-     <%= image_tag "banner_bottom_2.png", class:"banner_bottom" %>
-    <div>
-</div>
 
+<%= image_tag "banner_bottom_2.png", class: "banner_bottom", id: "limit-bottom-home" %>
 <div class="landing-bottom">
  <div class="row">
     <div class="col-xs-12 home-description">
