--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -25,7 +25,7 @@
             %>
           </div>
 
-          <%= select_tag(:category, options_for_select([["Friends", "friends"], ["Sports", "sports"], ["Sleep", "sleep"], ["Food", "food"]]), id: "index-category") %>
+          <%= select_tag(:category, options_for_select([["Friends", "friends"], ["Sports", "sports"], ["Sleep", "sleep"], ["Food", "food"]], params[:query]), id: "index-category") %>
 
           <div class="slidecontainer">
             <%= range_field_tag('price_cents', nil, min: 1, max: 30, value: params[:price_cents] ? params[:price_cents] : 30, class: "slider", id: "myPriceRange") %>
@@ -36,6 +36,7 @@
           <% end %>
         </div>
       </div>
+
     <div class="wrapper-search">
     <div class="row">
         <% @books.each do |book| %>
