--- a/app/assets/stylesheets/components/_home_carrousel.scss
+++ b/app/assets/stylesheets/components/_home_carrousel.scss
@@ -4,7 +4,7 @@
   position: relative;
   color: white;
   text-align: center;
-  height: 100vh;
+  height: 70vh;
   /* if you have a 70px navbar => height: calc(100vh - 70px); */
   background-size: cover !important;
 
@@ -13,6 +13,8 @@
     color: white;
     font-size: 60px;
     font-family: 'Gaegu';
+    margin-top: 0px;
+    margin-bottom: 35px;
   }
   p {
       color: #565656;
