--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -69,12 +69,12 @@
                     </div>
                     <div class="gender-row">
                       <div class="form-check-gender">
-                        <input class="hidden" type="radio" value="female" name="personalization[character_gender]" id="personalization_character_gender_female">
-                        <label class="choice" for="personalization_character_gender_female"><%= image_tag "girl.png" %></label>
+                        <input class="hidden" type="radio" value="girl" name="personalization[character_gender]" id="personalization_character_gender_girl">
+                        <label class="choice" for="personalization_character_gender_girl"><%= image_tag "girl.png" %></label>
                       </div>
                       <div class="form-check-gender">
-                        <input class="hidden" type="radio" value="male" name="personalization[character_gender]" id="personalization_character_gender_male">
-                        <label class="choice" for="personalization_character_gender_male"><%= image_tag "boy.png" %></label>
+                        <input class="hidden" type="radio" value="boy" name="personalization[character_gender]" id="personalization_character_gender_boy">
+                        <label class="choice" for="personalization_character_gender_boy"><%= image_tag "boy.png" %></label>
                       </div>
                     </div>
                   </div>
