worked on active button

--- a/app/assets/stylesheets/components/_indexcards.scss
+++ b/app/assets/stylesheets/components/_indexcards.scss
@@ -250,7 +250,7 @@
 
 .apply-btn {
   background-color: #fdbd6a;
-  border-color: #fdbd6a;
+  border: none;
   padding: 2px 20px;
   height: 39px;
   border-radius: 6.5px;
