--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -144,6 +144,10 @@
   margin-top: 20px;
 }
 
+.btn-primary:active {
+    background-color: #B4D682;
+}
+
 .btn-primary:hover {
     background-color: #B4D682;
     color: white;
