--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -43,6 +43,24 @@
   border-radius: 8px;
 }
 
+.btn-primary:focus, .btn-primary.focus{
+  background-color: #F0BD68;
+  border: none;
+  outline: none;
+}
+
+.btn-primary:active, .btn-primary.active, .open > .btn-primary.dropdown-toggle {
+  background-color: #F0BD68;
+  border: none;
+  outline: none;
+}
+
+.btn-primary:active:hover, .btn-primary:active:focus, .btn-primary:active.focus, .btn-primary.active:hover, .btn-primary.active:focus, .btn-primary.active.focus, .open > .btn-primary.dropdown-toggle:hover, .open > .btn-primary.dropdown-toggle:focus, .open > .btn-primary.dropdown-toggle.focus {
+  background-color: #F0BD68;
+  border: none;
+  outline: none;
+}
+
 .btn-primary:hover {
   color: white;
   background-color: #B4D682;
