--- a/app/assets/stylesheets/components/_flipper-image.scss
+++ b/app/assets/stylesheets/components/_flipper-image.scss
@@ -1,6 +1,7 @@
 .preview-image {
-  width: 240px;
-  height: 400px;
+  width: 100%;
+  height: 100%;
+  border-radius: 6px;
 }
 
 .preview-image-full {
