--- a/app/assets/stylesheets/components/_confirmation.scss
+++ b/app/assets/stylesheets/components/_confirmation.scss
@@ -60,7 +60,7 @@
   width: 84%;
   border-radius: 3px;
   background: rgba(180, 214, 130, 0.1);
-  padding: 20px 163px;
+  padding-left: 33%;
 
   td {
     font-size: 17px;
