changed foto and headline

--- a/app/views/books/home.html.erb
+++ b/app/views/books/home.html.erb
@@ -3,7 +3,7 @@
   <div class="banner-content">
     <h1><%= image_tag "bookie_logo.svg", height: 50 %> BOOKIDS</h1>
     <%= image_tag "linea_redonda.png" %>
-    <p>An easy way to solve problems through identification and imagination</p>
+    <p>Educate through personalized stories</p>
     <div class ="search-button">
       <%= form_tag books_path, method: :get do %>
       <%= text_field_tag :query,
