changed download header

--- a/app/views/books/home.html.erb
+++ b/app/views/books/home.html.erb
@@ -38,7 +38,7 @@
         </div>
         <div class="step_by_step last"  >
           <%= image_tag "icon3.png", class:"intro-icons"  %>
-          <h1>Download & Print </h1>
+          <h1>Download</h1>
           <p>Download the personalized book and receive a printed version only 4 days after.</p>
         </div>
       </div>
