--- a/app/assets/stylesheets/components/_review.scss
+++ b/app/assets/stylesheets/components/_review.scss
@@ -35,6 +35,10 @@
 .header-review {
   margin-top: 60px;
 }
+
+.review-description {
+  color: #757A77;
+}
 .picture {
   .avatar {
     height: 60px;
