fixed meta and problem

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
       <%= text_field_tag :query,
       params[:query],
       class: "search-form form-control",
-        placeholder: "Enter problem"
+        placeholder: "Enter topic"
         %>
         <% end %>
     </div>
